tests/snapshots/run_wpt_conformance__onnx_cast_int8_1D_constant_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast int8 1D constant tensor to int32",
    "onnx",
    "PASS",
)
